# experiments-2025-TCD-marl-neighbor-TL

./: .env  .gitignore  CHANGELOG.md  Dockerfile  README.md  baseline.sbatch  docker-compose.yml  package-lock.json  pyproject.toml  release.config.js  requirements.txt  run_on_gcp.sh  tl_experiment.sbatch
.github/workflows/: build-and-deploy.yml
plot/: plot.py
src/: agents.py  buffers.py  config.py  customdispersion.py  debug.py  densescenarios.py  estimator.py  main.py  models.py  transferlearning.py  utils.py
src/baseline/: iql.py
src/baseline/iql_dispersion_mlp__8d319bcb_25_12_02-10_17_27/: config.pkl  iql_dispersion_mlp__8d319bcb_25_12_02-10_17_27.json
src/baseline/iql_dispersion_mlp__8d319bcb_25_12_02-10_17_27/iql_dispersion_mlp__8d319bcb_25_12_02-10_17_27/scalars/: collection_reward_episode_reward_max.csv  collection_reward_episode_reward_mean.csv  collection_reward_reward_mean.csv  counters_current_frames.csv  counters_total_frames.csv  timers_collection_time.csv  timers_evaluation_time.csv  timers_iteration_time.csv  timers_total_time.csv  timers_training_time.csv  train_agents_grad_norm_loss.csv  train_agents_loss.csv
src/baseline/iql_dispersion_mlp__8d319bcb_25_12_02-10_17_27/iql_dispersion_mlp__8d319bcb_25_12_02-10_17_27/texts/: hparams0.txt
src/common/: agents.py  buffers.py  estimator.py  models.py  utils.py
src/eval/: eval.py
src/simple-spread/: main.py
src/spread/: config.py  main.py
