[project]
name = "experiments-2025-tcd-marl-neighbor-tl"
version = "0.1.0"
description = "Experiments on Neighbor-based Transfer Learning in MARL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pettingzoo[mpe]>=1.25.0",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]
