[tool.poetry]
name = "experiments-2025-TCD-marl-neighbor-TL"
version = "0.1.0"
description = ""
authors = ["Davide Domini <davide.domini@unibo.it>"]
readme = ""

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
matplotlib = "^3.10.6"
torch = "^2.8.0"
imageio = "^2.37.0"
seaborn = "^0.13.2"
numpy = "^2.3.3"
pettingzoo = {extras = ["mpe"], version = "^1.25.0"}
ray = {extras = ["data", "rllib", "serve", "train", "tune"], version = "^2.49.1"}
pyyaml = "^6.0.3"
pymunk = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"